# cce

./: .env.example  .gitignore  README.md  docker-compose.yml  project-context.md
backend/: .env.example  Dockerfile  README.md  pyproject.toml
backend/app/: config.py  exporter.py  llm_client.py  main.py  models.py  price_api.py
backend/tests/: test_llm_client.py  test_main.py
frontend/: .env.example  Dockerfile  README.md  index.html  package.json  tsconfig.json
frontend/src/: App.tsx  styles.css  types.ts
frontend/src/components/: EstimateTable.tsx  RegionSelector.tsx
frontend/src/services/: api.ts  exportExcel.ts
