[project]
name = "cce-backend"
version = "0.1.0"
description = "Backend for AWS cost estimation with LLM analysis and AWS pricing lookup."
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
  "fastapi>=0.114.0",
  "uvicorn>=0.24.0",
  "httpx>=0.26.0",
  "python-dotenv>=1.0.0",
  "openpyxl>=3.1.3",
  "pydantic>=2.8.0",
  "anthropic>=0.116.0",
  "aws-calculator-mcp>=1.3.4",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
